minio/nfs_minio_mount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-minio-mount
  labels:
    name: nfs-minio-mount
spec:
  containers:
  - name: nfs--minio
    image: nginx
    ports:
    - containerPort: 80
    # Mount the NFS volume in the container
    volumeMounts:
    - name: nfs-share
      mountPath: /mnt
  # Add the NFS volume to the Pod
  volumes:
  - name: nfs-share
    # Set the NFS server and path to the share
    nfs:
      server: 192.168.1.79
      path: /volume3/okd
