minio/minio_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app : minio 
  name: minio 
spec:
  host: minio-minio.apps.okd4.ktdemo.duckdns.org
  port:
    targetPort: minio-console 
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: my-minio 
    weight: 100
  wildcardPolicy: None
